# laboratory

./: CMakeLists.txt  run.sh
src/: CMakeLists.txt
src/project/: CMakeLists.txt
src/project/ansic/: CMakeLists.txt  main.c  man.c  man.h  person.c  person.h  person_define.h  singleton.c  singleton.h  singleton.struct  template-method.c  template-method.h  template-method.struct  virtualMan.c  virtualMan.h
src/project/coroutine/: CMakeLists.txt  main.cpp
src/project/filesystem/: CMakeLists.txt  main.cpp
src/project/template/: CMakeLists.txt  config.cpp  config.h  datamanager.h  main.cpp
